--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -284,10 +284,10 @@
         </Style.Triggers>
     </Style>
 
-    <!-- チェックボックス -->
+    <!-- CheckBox -->
     <Style TargetType="CheckBox" BasedOn="{StaticResource MaterialDesignFlatMidBgButton}">
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Foreground" Value="#FFFFFF"/>
     </Style>
     <Style x:Key="Check" TargetType="CheckBox" BasedOn="{StaticResource MaterialDesignFlatMidBgButton}">
@@ -298,8 +298,6 @@
         <Setter Property="Width" Value="110"/>
         <Setter Property="Height" Value="56"/>
         <Setter Property="Margin" Value="10,0,0,0"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
     </Style>
@@ -339,6 +337,22 @@
     </Style>
 
     <!-- TextBox -->
+    <Style x:Key="MaterialDesignOutlinedTextBox" TargetType="{x:Type TextBox}" BasedOn="{StaticResource MaterialDesignFloatingHintTextBox}">
+        <Setter Property="wpf:TextFieldAssist.HasOutlinedTextField" Value="True"/>
+        <Setter Property="wpf:TextFieldAssist.TextFieldCornerRadius" Value="4" />
+        <Setter Property="Padding" Value="{x:Static wpf:Constants.OutlinedTextBoxDefaultPadding}" />
+        <Style.Triggers>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="Background" Value="#FFFFFF"/>
+                <Setter Property="BorderThickness" Value="2"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#FFFFFF"/>
+                <Setter Property="BorderThickness" Value="2"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    
     <Style TargetType="TextBox" BasedOn="{StaticResource MaterialDesignOutlinedTextBox}">
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Background" Value="#FFFFFF"/>
