--- a/Display/PackSpecification.xaml
+++ b/Display/PackSpecification.xaml
@@ -75,13 +75,10 @@
                             <Button Style="{StaticResource BottomPackSpecification}" Command="{Binding CommandButton}" CommandParameter="ContainerCategory1" Visibility="{Binding VisibileButton1, Converter={StaticResource CollapsedConverter}}">
                                 <Viewbox Style="{StaticResource Button}">
                                     <WrapPanel>
-                                        <materialDesign:PackIcon Kind="{Binding IconButton[0]}" Margin="0,3,20,0" Height="30" Width="30"/>
-                                        <TextBlock Text="{Binding NameButton[0]}"/>
+                                        <materialDesign:PackIcon Kind="{Binding IconButton[0], FallbackValue=Package}" Margin="0,3,20,0" Height="30" Width="30"/>
+                                        <TextBlock Text="{Binding NameButton[0], FallbackValue=ポリ箱}"/>
                                     </WrapPanel>
                                 </Viewbox>
-                                <i:Interaction.Behaviors>
-                                    <local:ButtonBehavior/>
-                                </i:Interaction.Behaviors>
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="TouchDown">
                                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="ContainerCategory1"/>
@@ -91,13 +88,10 @@
                             <Button Style="{StaticResource BottomPackSpecification}" Command="{Binding CommandButton}" CommandParameter="ContainerCategory2" Visibility="{Binding VisibileButton1, Converter={StaticResource CollapsedConverter}}">
                                 <Viewbox Style="{StaticResource Button}">
                                     <WrapPanel>
-                                        <materialDesign:PackIcon Kind="{Binding IconButton[1]}" Margin="0,3,20,0" Height="30" Width="30"/>
-                                        <TextBlock Text="{Binding NameButton[1]}"/>
+                                        <materialDesign:PackIcon Kind="{Binding IconButton[1], FallbackValue=PackageVariant}" Margin="0,3,20,0" Height="30" Width="30"/>
+                                        <TextBlock Text="{Binding NameButton[1], FallbackValue=段ボール}"/>
                                     </WrapPanel>
                                 </Viewbox>
-                                <i:Interaction.Behaviors>
-                                    <local:ButtonBehavior/>
-                                </i:Interaction.Behaviors>
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="TouchDown">
                                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="ContainerCategory3"/>
@@ -107,13 +101,10 @@
                             <Button Style="{StaticResource BottomPackSpecification}" Command="{Binding CommandButton}" CommandParameter="ContainerCategory3" Visibility="{Binding VisibileButton2, Converter={StaticResource CollapsedConverter}}">
                                 <Viewbox Style="{StaticResource Button}">
                                     <WrapPanel>
-                                        <materialDesign:PackIcon Kind="{Binding IconButton[2]}" Margin="0,3,20,0" Height="30" Width="30"/>
-                                        <TextBlock Text="{Binding NameButton[2]}"/>
+                                        <materialDesign:PackIcon Kind="{Binding IconButton[2], FallbackValue=PackageVariant}" Margin="0,3,20,0" Height="30" Width="30"/>
+                                        <TextBlock Text="{Binding NameButton[2], FallbackValue=段ボール}"/>
                                     </WrapPanel>
                                 </Viewbox>
-                                <i:Interaction.Behaviors>
-                                    <local:ButtonBehavior/>
-                                </i:Interaction.Behaviors>
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="TouchDown">
                                         <i:InvokeCommandAction Command="{Binding CommandButton}" CommandParameter="ContainerCategory3"/>
